# Sijoy

./: README.md
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  idf_component.yml  mcp_server.cc
main/assets/locales/zh-CN/: language.json
main/boards/common/: wifi_board.cc
main/boards/seeedstudio-s3-wifi/: board_config.h  config.json  seeedstudio_s3_wifi_board.cc
main/display/: display.h  oled_display.cc  oled_display.h
main/display/lvgl_display/gif/: lvgl_gif.cc
main/face/: CMakeLists.txt  wajah.cpp  wajah.h
